# polygit

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: deploy-docs.yml  release.yml
docs/: .gitignore  DESIGN.md  PRODUCT.md  astro.config.mjs  package-lock.json  package.json
docs/public/: polygit-demo-dark.cast  polygit-demo-light.cast  polygit-demo.cast
docs/src/components/: GlyphLegend.astro  KeyboardModal.astro  KeymapExplorer.astro  TerminalCast.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: columns-and-glyphs.mdx  groups.mdx  keybindings.mdx  repo-page.md  tree-view.mdx
docs/src/content/docs/reference/: architecture.md  cli.md  exit-codes.md  siblings.md
docs/src/content/docs/start/: installation.md  usage.mdx
docs/src/data/: keymap.json  keymap.ts
docs/src/styles/: custom.css
polygit-siblings/: polygit-repos
src/: app.rs  cache.rs  changelog.rs  diffview.rs  explorer.rs  git.rs  graph.rs  groups.rs  highlight.rs  keybindings.rs  keymap.rs  main.rs  persist.rs  plain.rs  pr_cache.rs  profile.rs  render.rs  theme.rs  timeago.rs  treeview.rs  update.rs  worker.rs
src/app/: dropdown.rs  mod.rs  state1.rs  state2.rs  state3.rs  tests.rs  types.rs
src/render/: help.rs  list.rs  mod.rs  modals.rs  preview.rs  repo_page.rs  status_bar.rs  tests.rs
tests/: docs_in_sync.rs
tui-pick/: Cargo.toml
tui-pick/src/: components.rs  finder.rs  lib.rs  modal.rs  picker.rs  ranking.rs  style.rs  tooltip.rs
