# The repo root is BOTH the workspace root and the `polygit` binary package — so polygit's `src/`
# stays put while the reusable widget crate lives in `tui-pick/`. Profiles live here (workspace root)
# and apply to every member.
[workspace]
members = ["tui-pick"]
resolver = "2"

[package]
name = "polygit"
version = "2.96.0"
edition = "2024"

[[bin]]
name = "polygit"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
num_cpus = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
terminal-colorsaurus = "1.0.3"
tui-pick = { path = "tui-pick" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

# Fast iteration profile: drops whole-program LTO and single-unit codegen (the bulk of the
# release build's ~40s link cost) while keeping opt-level 3. Only `make build` / CI ship the
# fully-optimized `release` profile; this one backs the `make dev` inner loop.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
